--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                     <p class="block-service-list__item block-service-list__item_bg-red">Всегда рады вашему звонку по
                         телефону <br> <span>365-80-70</span> МТС | А1</p>
                 </div>
+
+
                 <form class="service-form">
                     <div class="input-container input-container_sm">
                         <label class="input-container__name ">Имя</label>
@@ -154,6 +156,7 @@
                                 робот-мойки
                             </p>
                         </div>
+                        <!-- feedback form -->
                         <form class="form__main" id="form-main">
                             <div class="form__row">
                                 <input type="hidden" name="title" value="block from site">
@@ -171,7 +174,7 @@
                             <textarea class="form__main-input-text" name="message" placeholder="Сообщение"
                                 id="form-message"></textarea>
                             <div class="btn-row">
-                                <button class="form__main-button" type="submit" onclick="">Отправить</button>
+                                <button class="block-btn block-btn_white" type="submit" onclick="">Позвонить</button>
                             </div>
                         </form>
                     </div>
