block service_bg-grey & _bg-white style done

--- a/index.html
+++ b/index.html
@@ -16,45 +16,46 @@
         <div class="service">
             <!-- bg-grey -->
             <div class="service service_bg-grey">
-                <img src="./assets/img/self_service.png" alt="self-service auto cleaner" class="service_bg-grey__image">
+                <img src="./images/self_service.png" alt="self-service auto cleaner" class="service_bg-grey__image">
             </div>
             <!-- bg-white -->
             <div class="service service_bg-white">
-                <div class="block-header">
-                    <img src="./assets/img/logo_swoosh.svg" alt="" class="block-header__icon">
-                    <h2 class="block-header__title">Сервис</h2>
+                <div class="header-container">
+                    <img src="./images/logo_swoosh.svg" alt="" class="header-container__icon">
+                    <h2 class="header-container__title">Сервис</h2>
                 </div>
 
-                <div class="service-content">
-                    <p class="service-content__item">
+                <div class="content-container">
+                    <p class="content-container__item">
                         Оборудование для автомоек требует грамотного обслуживания. Здесь важен не только ремонт и
                         техобслуживание. Всегда актуальна грамотная настройка программного обеспечения, своевременная
                         поставка
                         расходных запчастей и модернизация спецтехники
                     </p>
-                    <p class="service-content__item service-content__item_bold">
+                    <p class="content-container__item content-container__item_bold">
                         Специалисты компании ООО “Акватехносервис” всегда готовы помочь вам организовать бесперебойную
                         работу
                         автомойки
                     </p>
-                    <div class="service-list service-list_bg-white">
-                        Осуществляем ремонт:
-                        <li class="service-list__item">аппаратов высокого давления</li>
-                        <li class="service-list__item">пылесосов</li>
-                        <li class="service-list__item">турбосушек</li>
-                        <li class="service-list__item">пеногенераторов</li>
-                        <li class="service-list__item">ремонт и изготовления шлангов, пенокомплектов</li>
+                    <div class="block-list block-list_bg-white">
+                        <p class="block-list__title">Осуществляем ремонт:</p>
+                        <li class="block-list__item">аппаратов высокого давления</li>
+                        <li class="block-list__item">пылесосов</li>
+                        <li class="block-list__item">турбосушек</li>
+                        <li class="block-list__item">пеногенераторов</li>
+                        <li class="block-list__item">ремонт и изготовления шлангов, пенокомплектов</li>
                     </div>
-                    <p class="service-content__item"><span
-                            class="service-content__item service-content__item_red">Хотите узнать
+                    <p class="content-container__item"><span
+                            class="content-container__item content-container__item_red">Хотите узнать
                             цену?</span>
                         Наши любезные менеджеры проконсультируют вас
                         по всем нюансам сервисного обслуживания и его стоимости</p>
+                    <button class="block-btn block-btn_red">Позвонить <img src="./images/arrows/white_arrow.svg"
+                            alt="white arrow" class="block-btn__arrow block-btn__arrow_white"></button>
                 </div>
-                <button class="block-btn block-btn_red">Позвонить <img src="./assets/img/arrows/white_arrow.svg"
-                        alt="white arrow" class="block-btn__arrow block-btn__arrow_white"></button>
             </div>
-
+            
+            <!-- feedback-form -->
             <div class="service service_bg-red">
                 <div class="service-list service-list_bg-red">
                     <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
