--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         работу
                         автомойки
                     </p>
-                    <div class="block-list block-list_bg-white">
+                    <div class="block-list">
                         <p class="block-list__title">Осуществляем ремонт:</p>
                         <li class="block-list__item">аппаратов высокого давления</li>
                         <li class="block-list__item">пылесосов</li>
@@ -50,68 +50,52 @@
                             цену?</span>
                         Наши любезные менеджеры проконсультируют вас
                         по всем нюансам сервисного обслуживания и его стоимости</p>
-                    <button class="block-btn block-btn_red">Позвонить <img src="./images/arrows/white_arrow.svg"
-                            alt="white arrow" class="block-btn__arrow block-btn__arrow_white"></button>
+                    <button class="block-btn block-btn_red">Позвонить </button>
                 </div>
             </div>
-            
+
             <!-- feedback-form -->
             <div class="service service_bg-red">
-                <div class="service-list service-list_bg-red">
-                    <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
-                        class="block-service-list__icon">
-                    <li class="block-service-list__item block-service-list__item_bg-red">Вам важны стабильные поставки
-                        автохимии?</li>
-                    <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
-                        class="block-service-list__icon">
-                    <li class="block-service-list__item block-service-list__item_bg-red">Нужна лучшая цена автохимии на
-                        рынке?</li>
-                    <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
-                        class="block-service-list__icon">
-                    <li class="block-service-list__item block-service-list__item_bg-red">Нужен партнер, который грамотно
-                        настроит, отремонтирует моечное оборудование?</li>
-                    <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
-                        class="block-service-list__icon">
-                    <li class="block-service-list__item block-service-list__item_bg-red">Важно приятное, любезное
+                <div class="content-container content-container_left">
+                    <p class="content-container_left__item">Вам важны стабильные поставки
+                        автохимии?</p>
+                    <p class="content-container_left__item">Нужна лучшая цена автохимии на
+                        рынке?</p>
+                    <p class="content-container_left__item">Нужен партнер, который грамотно
+                        настроит, отремонтирует моечное оборудование?</p>
+                    <p class="content-container_left__item">Важно приятное, любезное
                         общение со
-                        специалистом?</li>
-                    <img src="./assets/img/block 8_icons/icon_small_question_mark.svg" alt="question mark"
-                        class="block-service-list__icon">
-                    <li class="block-service-list__item block-service-list__item_bg-red">Важно приятное, любезное
-                        общение со
-                        специалистом?</li>
-                    <img src="./assets/img/block 8_icons/icon_phone.svg" alt="phone icon"
-                        class="block-service-list__icon">
-                    <p class="block-service-list__item block-service-list__item_bg-red">Всегда рады вашему звонку по
+                        специалистом?</p>
+                    <p class="content-container_left__item content-container_left__item_lg">Всегда рады вашему звонку по
                         телефону <br> <span>365-80-70</span> МТС | А1</p>
                 </div>
 
 
-                <form class="service-form">
-                    <div class="input-container input-container_sm">
-                        <label class="input-container__name ">Имя</label>
-                        <input type="text" class="block-service-form__input" id="name">
-                    </div>
-                    <div class="input-container input-container_sm">
-                        <label class="input-container__name">Мобильный телефон</label>
-                        <input type="phone" class="block-service-form__input" id="phone">
-                    </div>
-                    <div class="input-container input-container_sm">
-                        <label class="input-container__name">Электронная почта</label>
-                        <input type="mail" class="block-service-form__input" id="email">
-                    </div>
-                    <div class="input-container input-container_sm">
-                        <label class="input-container__name">Город</label>
-                        <input type="text" class="block-service-form__input" id="location">
-                    </div>
-                    <div class="input-container input-container_lg">
-                        <label class="input-container__name">Сообщение</label>
-                        <textarea name="" id="" cols="30" rows="10" class="block-service-form__textarea"></textarea>
-                    </div>
-                    <button class="block-btn block-btn_white" type="submit">Позвонить <img
-                            src="./assets/img/arrows/red_arrow.svg" alt="white arrow"
-                            class="block-btn__arrow block-btn__arrow_red"></button>
-                </form>
+                <div class="content-container content-container_right">
+                    <form class="service-form">
+                        <div class="input-container input-container_sm">
+                            <label class="input-container__name ">Имя</label>
+                            <input type="text" class="block-service-form__input" id="name">
+                        </div>
+                        <div class="input-container input-container_sm">
+                            <label class="input-container__name">Мобильный телефон</label>
+                            <input type="phone" class="block-service-form__input" id="phone">
+                        </div>
+                        <div class="input-container input-container_sm">
+                            <label class="input-container__name">Электронная почта</label>
+                            <input type="mail" class="block-service-form__input" id="email">
+                        </div>
+                        <div class="input-container input-container_sm">
+                            <label class="input-container__name">Город</label>
+                            <input type="text" class="block-service-form__input" id="location">
+                        </div>
+                        <div class="input-container input-container_lg">
+                            <label class="input-container__name">Сообщение</label>
+                            <textarea name="" id="" cols="30" rows="10" class="block-service-form__textarea"></textarea>
+                        </div>
+                        <button class="block-btn block-btn_white" type="submit">Позвонить</button>
+                    </form>
+                </div>
             </div>
             <!-- block service -->
 
