contacts style done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                         общение со
                         специалистом?</p>
                     <p class="content-container_left__item content-container_left__item_sp">Всегда рады вашему звонку по
-                        телефону <br><span class="content-container__item_bold content-container__item_lg">365-80-70</span> МТС | А1</p>
+                        телефону <br><span
+                            class="content-container__item_bold content-container__item_lg">365-80-70</span> МТС | А1
+                    </p>
                 </div>
 
                 <!-- feedback form -->
@@ -101,32 +103,34 @@
             <!-- block service -->
 
             <div class="contacts">
-                <div class="block-header">
-                    <img src="./assets/img/logo_swoosh.svg" alt="" class="block-header__icon">
-                    <h2 class="block-header__title">Наши контакты</h2>
+                <div class="contacts contacts_left">
+                    <div class="header-container header-container_contacts">
+                        <img src="./images/logo_swoosh.svg" alt="" class="header-container__icon">
+                        <h2 class="header-container__title">Наши контакты</h2>
+                    </div>
+
+                    <div class="contacts-inner">
+                        <div class="contacts-inner contacts-inner_left">
+                            <img src="./images/block-9_icons/icon_map.svg" alt="map icon"
+                                class="content-container__icon">
+                            <p class="content-container__item_bold">г. Минск, ул. Толбухина
+                                2а, к.
+                                320</p>
+                            <p class="content-container__item">Мы работаем с 08:00 до
+                                20:00</p>
+                        </div>
+
+                        <div class="contacts-inner contacts-inner_right">
+                            <img src="./images/block-9_icons/icon_chat.svg" alt="message icon"
+                                class="content-container__icon">
+                            <p class="content-container__item_bold">info@cleanol.by</p>
+                            <p class="content-container__item">Для ваших вопросов</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="contacts-content block-contacts-content_left">
-                    <img src="./assets/img/block 9_icons/icon_map.svg" alt="map icon"
-                        class="block-contacts-content__icon">
-                    <p class="block-contacts-content__text block-contacts-content__text_bold">г. Минск, ул. Толбухина
-                        2а, к.
-                        320</p>
-                    <p class="block-contacts-content__text block-contacts-content__text_grey">Мы работаем с 08:00 до
-                        20:00
-                    </p>
-                </div>
-                <div class="block-contacts-content block-contacts-content_right">
-                    <img src="./assets/img/block 9_icons/icon_chat.svg" alt="message icon"
-                        class="block-contacts-content__icon">
-                    <p class="block-contacts-content__text block-contacts-content__text_bold">г. Минск, ул. Толбухина
-                        2а, к.
-                        320</p>
-                    <p class="block-contacts-content__text block-contacts-content__text_grey">Мы работаем с 08:00 до
-                        20:00
-                    </p>
-                </div>
-                <div class="block-contacts-map">
-                    <img src="./assets/img/block 9_icons/map.png" alt="map" class="block-contacts-map__image">
+
+                <div class="contacts contacts_right">
+                    <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
                 </div>
             </div>
 
