--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li class="block-list__item">ремонт и изготовления шлангов, пенокомплектов</li>
                     </div>
                     <p class="content-container__item"><span
-                            class="content-container__item content-container__item_red">Хотите узнать
+                            class="content-container__item_bold content-container__item_red">Хотите узнать
                             цену?</span>
                         Наши любезные менеджеры проконсультируют вас
                         по всем нюансам сервисного обслуживания и его стоимости</p>
@@ -68,7 +68,7 @@
                         специалистом?</p>
                     <p class="content-container_left__item content-container_left__item_sp">Всегда рады вашему звонку по
                         телефону <br><span
-                            class="content-container__item_bold content-container__item_lg">365-80-70</span> МТС | А1
+                            class="content-container__item_bold">365-80-70</span> МТС | А1
                     </p>
                 </div>
 
