--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" /> -->
+    <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="scss/style.css">
     <title>Document</title>
 </head>
@@ -21,7 +22,10 @@
                         <div class="banner__info">
                             <h1 class="banner__title">Ice Max Cleanol - СУПЕРпенный</h1>
                             <p class="banner__text">Отлично работает в жесткой воде</p>
-                            <button class="banner__button-more">Узнать больше</button>
+                            <button class="banner__button-more">
+                                <nobr>Узнать больше <img src="images/arrows/white_arrow.svg" alt="иконка стрелки">
+                                </nobr>
+                            </button>
                         </div>
                     </div>
                     <!-- slide 2-->
@@ -29,7 +33,10 @@
                         <div class="banner__info">
                             <h1 class="banner__title">Cleanol Optimal - оптимальное сочетание цена/качество</h1>
                             <p class="banner__text">Низкощелочной шампунь = бережная мойка</p>
-                            <button class="banner__button-more">Узнать больше</button>
+                            <button class="banner__button-more">
+                                <nobr>Узнать больше <img src="images/arrows/white_arrow.svg" alt="иконка стрелки">
+                                </nobr>
+                            </button>
                         </div>
                     </div>
                     <!-- slide 3-->
@@ -38,7 +45,10 @@
                             <h1 class="banner__title">Cleanol “Techno воск гидрофобный эффект”</h1>
                             <p class="banner__text">Вода не задерживаются на поверхности автомобиля. Капли скатываются
                                 за счет своей тяжести или под воздействием силы ветра</p>
-                            <button class="banner__button-more">Узнать больше</button>
+                            <button class="banner__button-more">
+                                <nobr>Узнать больше <img src="images/arrows/white_arrow.svg" alt="иконка стрелки">
+                                </nobr>
+                            </button>
                         </div>
                     </div>
                     <!-- slide 4-->
@@ -47,7 +57,10 @@
                             <h1 class="banner__title">Cleanol Atlant - идеален
                                 для моек самообслуживания</h1>
                             <p class="banner__text">Сильная моющая способность. Высокая пенность</p>
-                            <button class="banner__button-more">Узнать больше</button>
+                            <button class="banner__button-more">
+                                <nobr>Узнать больше <img src="images/arrows/white_arrow.svg" alt="иконка стрелки">
+                                </nobr>
+                            </button>
                         </div>
                     </div>
                     <!-- slide 5-->
@@ -55,24 +68,78 @@
                         <div class="banner__info">
                             <h1 class="banner__title">Cleanol - контроль качества</h1>
                             <p class="banner__text">на каждом этапе производства продукции</p>
-                            <button class="banner__button-more">Узнать больше</button>
+                            <button class="banner__button-more">
+                                <nobr>Узнать больше <img src="images/arrows/white_arrow.svg" alt="иконка стрелки">
+                                </nobr>
+                            </button>
                         </div>
                     </div>
                 </div>
 
-                <div class="banner__pagination swiper-scrollbar"></div>
-                <button class="banner__nav-button banner__nav-button_prev">
-                    <img src="images/arrows/left-arrow-line-symbol.svg" alt="иконка стрелки назад">
-                </button>
-                <button class="banner__nav-button banner__nav-button_next">
-                    <img src="images/arrows/right-arrow-line-symbol.svg" alt="иконка стрелки вперед">
-                </button>
+                <div class="banner__navigation">
+                    <div class="banner__pagination swiper-scrollbar"></div>
+                    <button class="banner__nav-button banner__nav-button_prev">
+                        <img src="images/arrows/left-arrow-line-symbol.svg" alt="иконка стрелки назад">
+                    </button>
+                    <button class="banner__nav-button banner__nav-button_next">
+                        <img src="images/arrows/right-arrow-line-symbol.svg" alt="иконка стрелки вперед">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- BLOCK 4 PRODUCTS -->
+
+        <div class="products">
+            <h2 class="products__title">Продукция</h2>
+            <!-- АВТОШАМПУНИ -->
+            <div class="products__shampoo">
+                <h3 class="products__subtitle">Автошампуни</h3>
+
+                <!-- видимый блок -->
+                <div class="products__visible-wrapper">
+                </div>
+
+                <!-- разворачивающийся блок -->
+                <div class="products__collapsible"></div>
+            </div>
+
+            <!-- ВОСКИ -->
+            <div class="products__wax">
+                <h3 class="products__subtitle">Воски</h3>
+            </div>
+
+            <!-- СПЕЦИАЛЬНЫЕ СРЕДСТВА -->
+            <div class="products__special">
+                <h3 class="products__subtitle">Специальные средства</h3>
             </div>
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
+    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
 </html>
+
+
+
+
+<!-- <div class="products__product_card">
+    <img src="./images/block4_products" alt="">
+    <h4 class="products__card-title"></h4>
+    <p class="products__card-info"></p>
+    <div class="products__ingredients">
+        <p class="products__card-subtitle">Состав:</p>
+        <p class="products__card-info"></p>
+    </div>
+    <div class="products__size">
+        <p class="products__card-subtitle">Фасовка:</p>
+        <button class="products__button-size">1 л</button>
+        <button class="products__button-size">5 кг</button>
+        <button class="products__button-size">20 кг</button>
+        <button class="products__button-buy">Купить</button>
+    </div>
+</div> -->
