--- a/index.html
+++ b/index.html
@@ -72,6 +72,43 @@
         </div>
         <!-- BLOCK 2 BANNER -->
 
+        <!-- block 6 -->
+        <div class="convinience" id="convinience">
+            <div class="title-container">
+                <img src="./images/logo_swoosh.svg" alt="" class="title-container__icon">
+                <h2 class="title-container__title">Почему с нами выгодно работать?</h2>
+            </div>
+
+            <div class="card-wrapper">
+                <div class="card-item">
+                    <button class="card-item__button">Бесплатно</button>
+                    <img src="./images/block-6_icons/b6_icon_delivery.svg" alt="" class="card-item__image">
+                    <p class="card-item__slogan">Доставка <br>автохимии</p>
+                </div>
+
+                <div class="card-item">
+                    <button class="card-item__button">Бесплатно</button>
+                    <img src="./images/block-6_icons/b6_icon_test.svg" alt="" class="card-item__image">
+                    <p class="card-item__slogan">Тестирование <br>автохимии</p>
+                </div>
+
+                <div class="card-item">
+                    <button class="card-item__button">Бесплатно</button>
+                    <img src="./images/block-6_icons/b6_con_consult.svg" alt="" class="card-item__image">
+                    <p class="card-item__slogan">Выезд и консультация специалиста</p>
+                </div>
+
+                <div class="card-item">
+                    <button class="card-item__button">Выгодно</button>
+                    <img src="./images/block-6_icons/b6_icon_payment.svg" alt="" class="card-item__image">
+                    <p class="card-item__slogan">Отсрочка <br>платежа</p>
+                </div>
+            </div>
+
+            <button class="block-btn block-btn_red block-btn_centered" onclick="">Позвонить </button>
+        </div>
+        <!-- block 6 -->
+
         <!-- block service -->
         <div class="service" id="service">
             <!-- bg-grey -->
@@ -80,9 +117,9 @@
             </div>
             <!-- bg-white -->
             <div class="service service_bg-white">
-                <div class="header-container">
-                    <img src="./images/logo_swoosh.svg" alt="" class="header-container__icon">
-                    <h2 class="header-container__title">Сервис</h2>
+                <div class="title-container">
+                    <img src="./images/logo_swoosh.svg" alt="" class="title-container__icon">
+                    <h2 class="title-container__title">Сервис</h2>
                 </div>
 
                 <div class="content-container">
@@ -166,9 +203,9 @@
         <!-- block contacts -->
         <div class="contacts" id="contacts">
             <div class="contacts contacts_left">
-                <div class="header-container header-container_contacts">
-                    <img src="./images/logo_swoosh.svg" alt="" class="header-container__icon">
-                    <h2 class="header-container__title">Наши контакты</h2>
+                <div class="title-container title-container_contacts">
+                    <img src="./images/logo_swoosh.svg" alt="" class="title-container__icon">
+                    <h2 class="title-container__title">Наши контакты</h2>
                 </div>
 
                 <div class="contacts-inner">
@@ -215,12 +252,14 @@
 
         <div class="footer-contacts">
             <div class="footer-contacts footer-contacts_top">
-                <p class="content-container__item"><span class="content-container__item_bold content-container__item_red">365-80-70</span> МТС | А1</p>
+                <p class="content-container__item"><span
+                        class="content-container__item_bold content-container__item_red">365-80-70</span> МТС | А1</p>
                 <p class="content-container__item">info@cleanol.by</p>
             </div>
 
             <div class="footer-contacts footer-contacts_bottom">
-                <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г. Минск, ул. Толбухина 2а, к. 320</p>
+                <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г. Минск,
+                    ул. Толбухина 2а, к. 320</p>
                 <p class="content-container__item content-container__item_tiny">Время работы: пн-пт с 9 до 18</p>
             </div>
         </div>
