--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             </div>
         </div>
         <!-- BLOCK 2 BANNER -->
+        <!-- block 5 -->
+        <div class="photos">
+            <img src="./images/block-5/photo_1.png" alt="" class="photos__item photos__item_l-top">
+            <img src="./images/block-5/photo_2.png" alt="" class="photos__item photos__item_r-top">
+            <img src="./images/block-5/photo_3.png" alt="" class="photos__item photos__item_l-bot">
+            <img src="./images/block-5/photo_4.png" alt="" class="photos__item photos__item_r-bot">
+        </div>
+        <!-- block 5 -->
 
         <!-- block 6 -->
         <div class="convinience" id="convinience">
